<resources>
    <string name="app_name">iris</string>
    <string name="notifications">Notifications</string>
    <string name="si_su">Please Sign in or sign up .</string>
    <string name="ok">Ok</string>
    <string name="sign_in">Sign In</string>
    <string name="back">Back</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="new_account">New Account</string>
    <string name="field_req">Field required</string>
    <string name="inv_phone">Invalid phone</string>
    <string name="signning_in">Signing In...</string>
    <string name="full_name">Full name</string>
    <string name="phone">Phone number</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="wait">Wait...</string>
    <string name="sign_up">Sign Up</string>
    <string name="perm_image_denied">Permission denied</string>
    <string name="upload_personal_photo">Upload personal photo</string>
    <string name="rsa">SR</string>
    <string name="home">Home</string>
    <string name="offers">Offers</string>
    <string name="my_order">My orders</string>
    <string name="fav">Favourite</string>
    <string name="me">Me</string>
    <string name="cancel">Cancel</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="update">Update</string>
    <string name="contact_us">Contact us</string>
    <string name="delete">Delete</string>

    <string name="update_password">Update password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="update_phone">Update phone</string>
    <string name="succ">Success</string>
    <string name="failed">Failed try again later</string>
    <string name="phone_number_not_exists">Phone number not exists</string>
    <string name="sgin_out">Signing out...</string>
    <string name="sign_out">Sign Out</string>
    <string name="order_sent_successfully">Order sent successfully</string>
    <string name="updating_phone">Updating phone number...</string>
    <string name="incorrect_old_password">incorrect old password</string>
    <string name="skip">Skip</string>

    <string name="inc_phonr_password">Incorrect user phone or password</string>
    <string name="signingup">Signing Up ...</string>
    <string name="phone_number_exists">Phone number or email are exist</string>
    <string name="personal_information">Personal information</string>
    <string name="_500_500_pixel">500 * 500 pixel</string>
    <string name="country">Country</string>
    <string name="pers_photo_req">Personal photo required</string>
    <string name="inv_email">Invalid email</string>
    <string name="inc_img_path">incorrect image path</string>
    <string name="something">Something went haywire</string>
    <string name="add_recently">Recently Added </string>
    <string name="most_seller">Most seller</string>
    <string name="transparent">Transparent</string>
    <string name="color">Colored</string>
    <string name="tools">Accessories</string>
    <string name="store">Store</string>
    <string name="orders">Orders</string>
    <string name="favourite">Favourite</string>
    <string name="more">More</string>
    <string name="package_size">Package size</string>
    <string name="a_different_prescription_for_each_eye">A different prescription for each eye</string>
    <string name="degree_of_length_or_shortness_of_victory">Degree of length or shortness of victory</string>
    <string name="left_eye">Left eye</string>
    <string name="right_eye">Right eye</string>
    <string name="number_of_boxes">Number of boxes</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="sign_up_using_phone">Sign up using phone</string>
    <string name="profile">Profile</string>
    <string name="you_are_just_one_step_away">You are just one step away...</string>
    <string name="never_share_phone_number">We will never share or sell your phone number</string>
    <string name="your_privacy_guaranteed">Your privacy is 100% guaranteed</string>
    <string name="by_using_this_app_you_agree_to">By using this app you agree to</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="details">Details</string>
    <string name="choose2">Choose</string>
    <string name="there_are_no_products_to_display">There are no products to display</string>
    <string name="new_order">New</string>
    <string name="current_order">Current</string>
    <string name="previous_order">Previous</string>
    <string name="package_of">package of</string>
    <string name="lenses">lenses</string>
    <string name="logout">Logout</string>
    <string name="logging_out">Logging out...</string>
    <string name="update_name">Update name</string>
    <string name="update_email">Update email</string>
    <string name="search">Search...</string>
    <string name="search2">Search</string>
    <string name="recently_search">Recently search</string>
    <string name="no_search_result">No search result</string>
    <string name="admin">Admin</string>
    <string name="accepted">Order accepted</string>
    <string name="refused">Order refused</string>
    <string name="finished">Order finished</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_thank">Welcome to Eyeres thank you for join us</string>
    <string name="order_number">Order number</string>
    <string name="total">Total</string>
    <string name="order_status">Order status</string>
    <string name="completed">Completed</string>
    <string name="show_order">Show order</string>
    <string name="not_accepted">Not accepted</string>
    <string name="ongoing">Ongoing</string>
    <string name="no_orders_to_display">No orders to display</string>
    <string name="not_approved">Not approved</string>
    <string name="order_accepted">Order accepted</string>
    <string name="order_ongoing">Order ongoing</string>
    <string name="collecting_order">Collecting order</string>
    <string name="order_completed">Order completed</string>
    <string name="we_are_pleased_to_serve_you">We are pleased to serve you</string>
    <string name="cancel_order">Cancel order</string>
    <string name="order_products">Order products</string>
    <string name="order_cost">Order total</string>
    <string name="amount">Amount</string>
    <string name="empty_cart">Empty cart</string>
    <string name="products_cost">Products cost</string>
    <string name="the_cart">The Cart</string>
    <string name="continue2">Continue</string>
    <string name="address">Address</string>
    <string name="notes">Notes (optional)</string>
    <string name="confirm">Confirm</string>
    <string name="the_cart_contains">The cart contains</string>
    <string name="item">Item</string>
    <string name="delete_item">Delete item ?</string>
    <string name="items">Items</string>
    <string name="delete_items">Delete items ?</string>
    <string name="Choose_deg">Choose degree</string>
    <string name="developers">Developer</string>
    <string name="select">Select</string>
    <string name="cancel2">Cancel</string>
    <string name="select_language">Select Language</string>
    <string name="language_settings">Language Settings</string>
    <string name="about_tour">About us</string>
    <string name="interesting_questions">Interesting questions</string>
    <string name="delivery_policy">Delivery Policy</string>
    <string name="no_questions_to_display">No questions to display</string>
    <string name="accept">Accept</string>
    <string name="accept3">Accept</string>
    <string name="acc_terms_cond">Please accept terms and conditions</string>
    <string name="payment_method">Payment method</string>
    <string name="transfer">Transfer</string>
    <string name="mada">Mada</string>
    <string name="sel_pay_method">Please Select payment method</string>
    <string name="most_seller2">Most Seller</string>
    <string name="the_finest_brands">The finest brands</string>
    <string name="there_are_no_brands_to_display">There are no product to display</string>
    <string name="sp_order">Special lenses</string>
    <string name="degree_of_deviation">Degree of deviation</string>
    <string name="axis_of_the_eye">Axis of the eye</string>
    <string name="ch_dev_deg">Choose deviation degree</string>
    <string name="ch_ax">Choose axis of eye</string>
    <string name="complete_order">Complete order</string>
    <string name="coupon">Coupon</string>
    <string name="inactive">Inactive</string>
    <string name="type_coupon_code">Type coupon code</string>
    <string name="activate">Activate</string>
    <string name="activated">Activated</string>
    <string name="cannot_make_conv">Cannot make a Conversation now try again later</string>
    <string name="have_discount">You have received a</string>
    <string name="discount">discount</string>
    <string name="product_added_to_cart_successfully">Product added to cart successfully</string>
    <string name="continue3">Continue</string>
    <string name="payment">Payment</string>
    <string name="payment_cash_is_only_available_within_riyadh_city">Cash payment is only available within Riyadh city. Delivery within Riyadh ?</string>
    <string name="left_eye_amount">Left eye amount</string>
    <string name="right_eye_amount">Right eye amount</string>
    <string name="ch_del_city">Choose delivery city</string>
    <string-array name="city_array">
        <item>Choose</item>
        <item>Inside Riyadh</item>
        <item>Outside Riyadh</item>
    </string-array>


</resources>
