<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/notifications"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        />
    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="17sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/product_added_to_cart_successfully"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_margin="5dp"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btn_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:text="@string/continue3"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />

        <Button
            android:id="@+id/btn_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:text="@string/payment"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />
    </LinearLayout>
</LinearLayout>