<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:background="@color/bg"
    android:id="@+id/root"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_back_photo"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:padding="3dp"
                android:src="@drawable/green_left_arrow"
                android:clickable="false"
                android:longClickable="false"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingStart="5dp"
                android:text="@string/back"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                tools:ignore="RtlCompat"
                android:clickable="false"
                android:longClickable="false"
                />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >
            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_alignParentTop="true"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:text="@string/profile"
                    android:layout_marginBottom="8dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/gray"
                    android:textSize="15sp"
                    android:text="@string/you_are_just_one_step_away"
                    />
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/ll"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:paddingBottom="20dp"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    >


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        >
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/user"
                            android:padding="4dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp"
                            android:text="@string/personal_information"
                            />
                    </LinearLayout>
                    <EditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/edt_sign_up_bg"
                        android:inputType="text"
                        android:textColorHint="@color/gray"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:hint="@string/full_name"
                        />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/edt_sign_up_bg"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp"

                        >
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp"
                            android:gravity="center"
                            android:src="@drawable/mail"
                            android:padding="10dp"
                            />
                        <EditText
                            android:id="@+id/edt_email"
                            android:layout_width="match_parent"
                            android:layout_height="37dp"
                            android:layout_gravity="center_vertical"
                            android:background="@color/white"
                            android:hint="@string/email_address"
                            android:textColorHint="@color/gray"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:singleLine="true"
                            android:gravity="center_vertical"
                            />
                    </LinearLayout>

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        >
                        <CheckBox
                            android:id="@+id/checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:button="@drawable/checkbox_bg"
                            android:textColor="@color/gray"
                            android:textSize="14sp"
                            android:text="@string/accept3"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            />

                        <TextView
                            android:id="@+id/tv_terms"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toEndOf="@id/checkbox"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp"
                            app:layout_constraintTop_toTopOf="@id/checkbox"
                            app:layout_constraintBottom_toBottomOf="@id/checkbox"
                            android:text="@string/terms_and_conditions"
                            app:layout_constraintHorizontal_bias="0"
                            android:textStyle="italic"
                            />
                        <View
                            android:layout_width="0dp"
                            android:layout_height="1px"
                            android:background="@color/colorPrimary"
                            app:layout_constraintStart_toStartOf="@id/tv_terms"
                            app:layout_constraintEnd_toEndOf="@id/tv_terms"
                            app:layout_constraintTop_toBottomOf="@id/tv_terms"
                            />
                    </android.support.constraint.ConstraintLayout>


                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="50dp"
                        app:borderWidth="5dp"
                        app:elevation="0dp"
                        app:fabCustomSize="50dp"
                        android:src="@drawable/correct"
                        />

                </LinearLayout>

            </FrameLayout>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>